# Qt_app

./: CMakeLists.txt  Main.qml  TemperatureModel.h  main.cpp  temperaturecontroller.cpp  temperaturecontroller.h  temperaturemodel.cpp
